--- a/package.json
+++ b/package.json
@@ -15,9 +15,16 @@
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
     "next": "15.1.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -40,6 +47,8 @@
     "next-compose-plugins": "^2.2.1",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "prisma": "^6.1.0",
+    "supabase": "^2.1.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
