--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "prisma generate",
     "dev": "pnpm run lint --fix && pnpm run prettier && next dev",
-    "build": "next build",
+    "build": "next build && prisma generate",
     "start": "next start",
     "lint": "next lint",
     "prettier:check": "prettier --check '**/**/*.{js,jsx,ts,tsx}'",
@@ -15,6 +16,7 @@
     "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
+    "prisma": "^6.1.0",
     "@prisma/client": "^6.1.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
