--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "prisma generate",
     "dev": "pnpm run lint --fix && pnpm run prettier && next dev",
-    "build": "next build && prisma generate",
+    "build": "next build",
+    "postinstall": "prisma generate",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint",
     "prettier:check": "prettier --check '**/**/*.{js,jsx,ts,tsx}'",
